# duneproc

./: .gitignore  CMakeLists.txt  README.md  build  directSetup.sh  ibRunDates.C  setup.sh
Exec/: CMakeLists.txt  ibRunPeriod.cxx  ibRunPeriodRuns.cxx
Fcl/: CMakeLists.txt  addChannelTickPrep.fcl  addChannelTickRaw.fcl  addChannelTickSig.fcl  addDetdispPrep.fcl  addDetdispRaw.fcl  addPedestalDist.fcl  addRoiViewer.fcl  addThresholdSignalFinder.fcl  addWfRaw.fcl  dqm2.fcl  evtview.fcl  fft15000.fcl  load_dataprep.fcl  rawapaz.fcl  rawdist.fcl  reco_dataprep.fcl  reco_dataprep_sim.fcl  run_dataprep.fcl  run_dataprep_apa7.fcl  run_dataprep_sim.fcl  useChannelStatus2018.fcl  wfMit.fcl  wfRaw.fcl  wfRawDist.fcl  wfRawFull.fcl
Fcl/Iceberg/: CMakeLists.txt  addIbChtKe.fcl  addIbChtNoise.fcl  addIbChtNroKe.fcl  addIbChtRoiKe.fcl  addIbChtSplitNoise.fcl  addIbRoiPlots.fcl  addRoiTree.fcl  addRoiTreeNoise.fcl  channelstatus_iceberg.fcl  dqmi.fcl  ib5aWfTail.fcl  ibChtPlotters.fcl  ibRunDataprepMit.fcl  ibWfMit.fcl  ibWfRaw.fcl  ibWfRawDist.fcl  load_dataprep_iceberg.fcl  local_channelstatus_iceberg.fcl  local_stickycodes_iceberg.fcl  runIb5Cal.fcl  runIb5Cnr.fcl  run_dataprep_iceberg.fcl  run_iceberg3_dqm1.fcl  run_iceberg4_dqm1.fcl  run_iceberg4a_dqm1.fcl  run_iceberg4b_dqm1.fcl  run_iceberg4b_roiPlots.fcl  run_iceberg5C21_dqm1.fcl  run_iceberg5C22_dqm1.fcl  run_iceberg5C33_dqm1.fcl  run_iceberg5_dqm1.fcl  run_iceberg5a_dqm1.fcl  run_iceberg5b_dqm1.fcl  run_iceberg5c_dqm1.fcl  run_iceberg5d_dqm1.fcl  run_iceberg5e_dqm1.fcl  run_iceberg5f_dqm1.fcl  run_iceberg5j_dqm1.fcl  run_iceberg5n_dqm1.fcl  (+45 more)
Fcl/Protodune/: pdspRunDataprepMit.fcl  pdspRunDataprepMitAdc.fcl
Script/: CMakeLists.txt  cacheDuneDataset  duneproc  duneprocHelp  duneprocMakeFcl  duneprocVersion  findFileCache  findFilePnfs  findFileXroot  formatInt  getGridProxy  hdcbFindFiles  hdcbRunTime  ibDaqConfig  ibFindFiles  ibGroupRuns  ibRunPeriod  ibSavePeds  ibSaveWfRaw  ibStageFiles  obsolete-ibRunPeriod  pdspDataStream  pdspEventFileList  pdspFindFiles  pdspRunFileCount  pdspRunLfn  pdspShowMetadata  pdspStartTime  pdspWibCount  runjobs  savedqm2  savedqm3  savedqmi  savedqmw  setup.sh.in  showMetadata  stageDuneDataset  vdbcbFindFiles  vdtcbFindFiles
Utility/: CMakeLists.txt  IcebergHelper.cxx  IcebergHelper.h  classes.h  classes_def.xml
doc/: CMakeLists.txt  ibRunDates.txt  iceberg3ChannelNumbering.txt  iceberg5RunGroups.txt  icebergRunGroups.txt  mydst.txt  mysimdst.txt  staging_and_cloning.md  tutorial01-old.md  tutorial01.md  tutorial01.txt  tutorial02.md  tutorial_iceberg.md
fcl/: CMakeLists.txt  addChannelTickPrep.fcl  addChannelTickRaw.fcl  addChannelTickSig.fcl  addThresholdSignalFinder.fcl  alltick.fcl  dqm3.fcl  dqmw.fcl  rawdist.fcl  reco_dataprep_sim.fcl  run_dataprep.fcl  run_dataprep_apa7.fcl  wfMit.fcl  wfRaw.fcl
ipynb/: dqm.ipynb  dqmw.ipynb
